this is new file

--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- <link rel="stylesheet" href="styles.css"> -->
+
+
+   
 </head>
+
 <body>
     adasdasd
 
     <h1>Thi is our new code</h1>
+
+    <p>
+        <spans>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quasi sint nulla, eum commodi id saepe</spans>
+        nemo nam porro, repellat impedit minus eveniet quidem quam tempore. At in aliquam harum.
+    </p>
 </body>
+
 </html>
